--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Github Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>i am going to market to buy something</h1>
+    <p> dskjnklfj knuejh mkijn kll nklok klm eoklefjrelrefrkl;j klojrofrekfufrfbjmcvekaaasddk ,mdh </p>
 </body>
 </html>
