--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <body>
     <h1>i am going to market to buy something</h1>
     <p> dskjnklfj knuejh mkijn kll nklok klm eoklefjrelrefrkl;j klojrofrekfufrfbjmcvekaaasddk ,mdh </p>
+    <img src="FB_IMG_1615875890514.jpg" alt="">
+    <img src="FB_IMG_1615878950081.jpg" alt="">
+    <img src="FB_IMG_1615878950081.jpg" alt="">
 </body>
 </html>
