--- a/index.html
+++ b/index.html
@@ -4,14 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Github Repo</title>
+    <title>Web developer-01</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>i am going to market to buy something</h1>
-    <p> dskjnklfj knuejh mkijn kll nklok klm eoklefjrelrefrkl;j klojrofrekfufrfbjmcvekaaasddk ,mdh </p>
-    <img src="FB_IMG_1615875890514.jpg" alt="">
-    <img src="FB_IMG_1615878950081.jpg" alt="">
-    <img src="FB_IMG_1615878950081.jpg" alt="">
+    <section class="flexible-container" id="background-image">
+        <div class="half-width" id="padding-top">
+            <h1>Welcome To <span class="orange">peter poker</span> World</h1>
+            <h4>Build Climber and Train Stopper</h4>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="link-button" target="blank" href="https://www.facebook.com/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="abisuyang.png" alt="abisuyang">
+        </div>
+    </section>
+    <section class="flexible-container"  id="background-image2">
+            <div class="width-half" id="img">
+                <img src="abi suyang.png" alt="abi suyang">
+            </div>
+            <div class="width-half" id="padding-top">
+                <h1>Dream Big</h1>
+                <h4>Become a web developer</h4>
+                <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+                <a class="link-button" target="blank" href="https://www.facebook.com/">DOWNLOAD RESUME</a>
+            </div>
+    </section>
+    <section>
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="box1" id="box-shadow">
+                <h1>Full Stack Web Developer</h1>
+                <h2>2021-Present | Pro Level Developer</h2>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="box2" id="box-shadow">
+                <h1>Baby Web Developer</h1>
+                <h2>2020-2021 | Programming Hero Learner</h2>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+    
+    <p id="p">© Abi Suyang 2021, a Programming Hero initiative.</p>
 </body>
 </html>
